--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -39,3 +39,9 @@ header {
     border-color: #fff;
   }
 }
+
+@media screen and (max-width: 576px) {
+  .button {
+    width: 100%;
+  }
+}
